<resources>
    <string name="app_name">CatchOpportunity</string>
    <string name="login_title">Login</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>

    <string name="login_button">LOG IN</string>
    <string name="register_button">REGISTER</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_register">Register</string>
    <string name="findlocation_button">FIND MY LOCATION</string>


    <string name="menutitle_profile">Profile</string>
    <string name="menutitle_logout">Logout</string>
    <string name="menutitle_myopportunities">Caught Opportunities</string>
    <string name="menutitle_qrcode">QrCode Reader</string>
    <string name="menutitle_home">Home</string>
    <string name="update_my_location">UPDATE LOCATION</string>
    <string name="refresh">refresh</string>
    <string name="menutitle_caught">CAUGHT OPPORTUNITIES</string>
    <string name="profile_password">Password :</string>
    <string name="profile_latitude">Latitude :</string>
    <string name="profile_email">Email :</string>
    <string name="profile_longitude">Longitude :</string>
    <string name="profile_profile">Profile</string>
    <string name="menutitle_search">Search</string>


    <string-array name="spinnerArray">
        <item>MaxDistance (M)</item>
        <item>Description</item>
        <item>City</item>
        <item>ID</item>
    </string-array>


</resources>
