<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.RegisterActivity"
    android:background="@color/colorBackgroundDark"
    android:orientation="vertical">

    <TextView
        android:background="@color/colorBackgorundLight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/title_register"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="15pt" />


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="20dp"
                android:textColor="@color/colorWhite"
                android:text="@string/email"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/register_email"
                android:layout_marginHorizontal="20dp"
                android:background="@color/colorWhite"
                android:textColorHint="@color/colorBackgroundDark"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="40dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="20dp"
                android:textColor="@color/colorWhite"
                android:text="@string/password"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/register_password"
                android:layout_marginHorizontal="20dp"
                android:background="@color/colorWhite"
                android:textColorHint="@color/colorBackgroundDark"
                android:textAlignment="center"
                android:password="true"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="40dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="20dp"
                android:textColor="@color/colorWhite"
                android:text="@string/latitude"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            <EditText
                android:inputType="numberDecimal"
                android:id="@+id/register_latitude"
                android:layout_marginHorizontal="20dp"
                android:background="@color/colorWhite"
                android:textColorHint="@color/colorBackgroundDark"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="40dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="20dp"
                android:textColor="@color/colorWhite"
                android:text="@string/longitude"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            <EditText
                android:inputType="numberDecimal"
                android:id="@+id/register_longitude"
                android:layout_marginHorizontal="20dp"
                android:background="@color/colorWhite"
                android:textColorHint="@color/colorBackgroundDark"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="40dp" />


        </LinearLayout>

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/btnFindLocation"
                android:text="@string/findlocation_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnRegister"
                android:text="@string/register_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content" />






        </LinearLayout>










    </LinearLayout>




</LinearLayout>