<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.CaughtActivity"
    android:background="@color/colorBackgroundDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:background="@color/colorBackgorundLight"
            android:textColor="@color/colorWhite"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menutitle_caught"
            android:textSize="30sp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnUpdateLocation2"
                android:drawableEnd="@drawable/icon_updatelocation"
                android:text="@string/update_my_location"
                android:layout_width="199dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnRefresh2"
                android:drawableEnd="@drawable/icon_refresh"
                android:text="@string/refresh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="2dip"
            android:background="@color/colorWhite" />

        <ListView
            android:id="@+id/caughtList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </ListView>




    </LinearLayout>


</LinearLayout>