<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.ProfileActivity"
    android:background="@color/colorBackgroundDark">



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:background="@color/colorBackgorundLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/profile_profile"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="15pt" />

        <LinearLayout

            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="20sp"
                android:textColor="@color/colorBlack"
                android:text="@string/profile_email"
                android:layout_width="110dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/profile_txtEmail"
                android:textSize="20sp"
                android:textColor="@color/colorBlack"
                android:layout_width="match_parent"
                android:layout_height="28dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="20sp"
                android:textColor="@color/colorBlack"
                android:text="@string/profile_password"
                android:layout_width="110dp"
                android:layout_height="wrap_content" />

            <EditText
               android:inputType="textPassword"
                android:id="@+id/profile_txtPassword"
                android:background="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="28dp" />

        </LinearLayout>

        <LinearLayout

            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="20sp"
                android:textColor="@color/colorBlack"
                android:text="@string/profile_latitude"
                android:layout_width="110dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/profile_txtLatitude"
                android:inputType="numberDecimal"
                android:background="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="28dp" />



        </LinearLayout>

        <LinearLayout

            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="20sp"
                android:textColor="@color/colorBlack"
                android:text="@string/profile_longitude"
                android:layout_width="110dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/profile_txtLongitude"
                android:inputType="numberDecimal"
                android:background="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="28dp" />



        </LinearLayout>


        <LinearLayout
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/profile_btnFind"
                android:text="FIND ME"
                android:drawableEnd="@drawable/icon_updatelocation"
                android:layout_width="150dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/profile_btnSave"
                android:drawableEnd="@drawable/icon_save"
                android:text="save settings"
                android:layout_width="180dp"
                android:layout_height="wrap_content" />



        </LinearLayout>







    </LinearLayout>



</LinearLayout>